--- a/templates/index.html
+++ b/templates/index.html
@@ -91,9 +91,9 @@
     </div>
 
     <!-- Botão para outra página -->
-    <a href="forms.html" class="botao">Iniciar formulário</a>
+    <a href="/forms" class="botao">Iniciar formulário</a>
 
-    <!-- Logo no canto superior direito -->
+    <!-- Logo no canto superior esquerdo -->
     <div class="logo">
         <img src="logo.png" style="width: 100%; height: 100%; border-radius: 10%;" />
     </div>
