--- a/templates/forms.html
+++ b/templates/forms.html
@@ -372,7 +372,7 @@
         const data = Object.fromEntries(formData.entries());
 
         try {
-            const response = await fetch('http://localhost:5000/would-use-app', {
+            const response = await fetch('https://divination-incluses-user.onrender.com/would-use-app', {
                 method: 'POST',
                 headers: {
                     'Content-Type': 'application/json',
