--- a/templates/forms.html
+++ b/templates/forms.html
@@ -372,13 +372,13 @@
         const data = Object.fromEntries(formData.entries());
 
         try {
-            const response = await fetch('https://divination-incluses-user.onrender.com/would-use-app', {
-                method: 'POST',
-                headers: {
-                    'Content-Type': 'application/json',
-                },
-                body: JSON.stringify(data),
-            });
+          const response = await fetch('/would-use-app', {
+                    method: 'POST',
+                    headers: {
+                        'Content-Type': 'application/json',
+                    },
+                    body: JSON.stringify(data),
+                });
 
             if (!response.ok) {
                 throw new Error('Network response was not ok'); // Lança um erro se a resposta não for ok
